Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int ECF_SetAAC(const INTPTR ecfHandle, const INTPTR aacHandle);

DllImport int ECF_SetAguardaImpressao(const INTPTR ecfHandle, const BOOL aguardaImpressao);

DllImport int ECF_SetBaud(const INTPTR ecfHandle, const int baud);

DllImport int ECF_SetComandoLOG(const INTPTR ecfHandle, const PCHAR comandoLog);

DllImport int ECF_SetDataBits(const INTPTR ecfHandle, const int dataBits);

DllImport int ECF_SetDecimaisPreco(const INTPTR ecfHandle, const int decimaisPreco);

DllImport int ECF_SetDecimaisQtd(const INTPTR ecfHandle, const int decimaisQtd);

DllImport int ECF_SetDescricaoGrande(const INTPTR ecfHandle, const BOOL descricaoGrande);

DllImport int ECF_SetGavetaSinalInvertido(const INTPTR ecfHandle, const BOOL gavetaSinalInvertido);

DllImport int ECF_SetHandShake(const INTPTR ecfHandle, const int handShake);

DllImport int ECF_SetHardFlow(const INTPTR ecfHandle, const BOOL hardFlow);

DllImport int ECF_SetIntervaloAposComando(const INTPTR ecfHandle, const int intervalo);

DllImport int ECF_SetLinhasEntreCupons(const INTPTR ecfHandle, const int linhasEntreCupons);

DllImport int ECF_SetModelo(const INTPTR ecfHandle, const int modelo);

DllImport int ECF_SetOperador(const INTPTR ecfHandle, const PCHAR operador);

DllImport int ECF_SetParity(const INTPTR ecfHandle, const int parity);

DllImport int ECF_SetPorta(const INTPTR ecfHandle, const PCHAR porta);

DllImport int ECF_SetSoftFlow(const INTPTR ecfHandle, const BOOL softFlow);

DllImport int ECF_SetStopBits(const INTPTR ecfHandle, const int stopBits);

DllImport int ECF_SetTimeOut(const INTPTR ecfHandle, const int timeOut);

DllImport int ECF_SubtotalizaCupom(const INTPTR ecfHandle, const double descontoAcrescimo, const PCHAR mensagemRodape);

DllImport int ECF_SubtotalizaNaoFiscal(const INTPTR ecfHandle, const double descontoAcrescimo, const PCHAR mensagemRodape);

DllImport int ECF_Suprimento(const INTPTR ecfHandle, const double valor, const PCHAR obs);

DllImport int ECF_VendeItem(const INTPTR ecfHandle, const PCHAR codigo, const PCHAR descricao, const PCHAR aliquotaICMS, const double qtd, const double valorUnitario, const double descontoPorc, const PCHAR unidade, const PCHAR tipoDescontoAcrescimo, const PCHAR descontoAcrescimo);