Projetos/ACBrFramework/ACBrFramework.OCX/Defs/ACBrECF.bas

Public Declare Function ECF_SetAAC Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal aacHandle As Long) As Long
Public Declare Function ECF_SetAguardaImpressao Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal aguardaImpressao As Boolean) As Long
Public Declare Function ECF_SetBaud Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal baud As Long) As Long
Public Declare Function ECF_SetComandoLOG Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal comandoLog As String) As Long
Public Declare Function ECF_SetDataBits Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal dataBits As Long) As Long
Public Declare Function ECF_SetDecimaisPreco Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal decimaisPreco As Long) As Long
Public Declare Function ECF_SetDecimaisQtd Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal decimaisQtd As Long) As Long
Public Declare Function ECF_SetDescricaoGrande Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal descricaoGrande As Boolean) As Long
Public Declare Function ECF_SetGavetaSinalInvertido Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal gavetaSinalInvertido As Boolean) As Long
Public Declare Function ECF_SetHandShake Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal handShake As Long) As Long
Public Declare Function ECF_SetHardFlow Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal hardFlow As Boolean) As Long
Public Declare Function ECF_SetIntervaloAposComando Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal intervalo As Long) As Long
Public Declare Function ECF_SetLinhasEntreCupons Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal linhasEntreCupons As Long) As Long
Public Declare Function ECF_SetModelo Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal modelo As Long) As Long
Public Declare Function ECF_SetOperador Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal operador As String) As Long
Public Declare Function ECF_SetParity Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal parity As Long) As Long
Public Declare Function ECF_SetPorta Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal porta As String) As Long
Public Declare Function ECF_SetSoftFlow Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal softFlow As Boolean) As Long
Public Declare Function ECF_SetStopBits Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal stopBits As Long) As Long
Public Declare Function ECF_SetTimeOut Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal timeOut As Long) As Long
Public Declare Function ECF_SubtotalizaCupom Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal descontoAcrescimo As Double, ByVal mensagemRodape As String) As Long
Public Declare Function ECF_SubtotalizaNaoFiscal Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal descontoAcrescimo As Double, ByVal mensagemRodape As String) As Long
Public Declare Function ECF_Suprimento Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal valor As Double, ByVal obs As String) As Long
Public Declare Function ECF_VendeItem Lib "ACBrFramework32.DLL" (ByVal ecfHandle As Long, ByVal codigo As String, ByVal descricao As String, ByVal aliquotaICMS As String, ByVal qtd As Double, ByVal valorUnitario As Double, ByVal descontoPorc As Double, ByVal unidade As String, ByVal tipoDescontoAcrescimo As String, ByVal descontoAcrescimo As String) As Long
